--- a/app/src/main/res/drawable/rounded_corner_feedback_bg.xml
+++ b/app/src/main/res/drawable/rounded_corner_feedback_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
-    <stroke android:width="1dp" android:color="#b5b4b4b4" />
+    <solid android:color="#fcfcfc"/>
+    <stroke android:width="1dp" android:color="#b5b4b4" />
     <corners android:radius="20dp"/>
 </shape>
