--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -51,18 +51,18 @@
                             style="@style/font_medium_bold_settings"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginVertical="25dp"
+                            android:layout_marginVertical="15dp"
                             android:layout_marginStart="12dp"
                             android:layout_marginEnd="@dimen/settings_language_margin"
                             android:text="@string/language"
                             android:textAlignment="viewStart"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/text_color" />
 
                         <LinearLayout
                             android:layout_width="150dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="end|center_vertical"
-                            android:layout_marginVertical="25dp"
+                            android:layout_marginVertical="15dp"
                             android:layout_marginStart="@dimen/settngs_switch_margin"
                             android:background="@drawable/capsule_white_bg_settings"
                             android:gravity="end"
@@ -122,15 +122,15 @@
                         android:textAlignment="viewStart"
                         android:layout_marginStart="12dp"
                         android:layout_marginEnd="@dimen/settings_talkback_margin"
-                        android:layout_marginVertical="25dp"
+                        android:layout_marginVertical="15dp"
                         style="@style/font_medium_bold_settings"
-                        android:textColor="@color/black"
+                        android:textColor="@color/text_color"
                         android:text="@string/talkback"/>
                     <LinearLayout
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/settngs_switch_margin"
-                        android:layout_marginVertical="25dp"
+                        android:layout_marginVertical="15dp"
                         android:weightSum="2"
                         android:background="@drawable/capsule_white_bg_settings"
                         android:gravity="end">
@@ -183,9 +183,9 @@
                         android:layout_height="wrap_content"
                         android:textAlignment="viewStart"
                         android:layout_marginStart="12dp"
-                        android:layout_marginVertical="20dp"
+                        android:layout_marginVertical="15dp"
                         style="@style/font_medium_bold_settings"
-                        android:textColor="@color/black"
+                        android:textColor="@color/text_color"
                         android:text="@string/fontsize"/>
 
                     <LinearLayout
